# demo_api_test

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  conftest.py  description_conftest.py  pyproject.toml
api/: __init__.py
api/libs/: AccountsApi.py  Api.py  BaseApi.py  ConferencesApi.py  TestData.py
tests/all/accounts/: test_accounts_default_settings.py  test_accounts_delete.py
tests/all/conference/: test_created_conference.py  test_delete_conference.py  test_start_conference.py  test_stop_conference.py
